Heavy debugging and improvements, fixing search, improving security

--- a/static/styles.css
+++ b/static/styles.css
@@ -398,10 +398,15 @@ a {
     border-radius: 6px;
     padding: 10px;
     margin-bottom: 10px;
+    white-space: pe-line;
 }
 
 .comment p {
     margin: 5px 0;
+}
+
+.comment-box {
+    white-space: pre-line;
 }
 
 .card {
