--- a/templates/browseruns.html
+++ b/templates/browseruns.html
@@ -61,7 +61,7 @@
                 <div class="radio-group">
                     <label><input type="radio" name="run_type" value="kevyt">Kevyt</label>
                     <label><input type="radio" name="run_type" value="tavoitteellinen">Tavoitteellinen</label>
-                    <label><input type="radio" name="run_type" value="kisaan tähtäävä">Kisaan tähtäävä</label>
+                    <label><input type="radio" name="run_type" value="kilpailuun tähtäävä">Kilpailuun tähtäävä</label>
                     <label><input type="radio" name="run_type" value="kisat">Kisat</label>
                 </div>
             </div>
