Edited comment sections

--- a/templates/kisa_sivu.html
+++ b/templates/kisa_sivu.html
@@ -80,7 +80,7 @@
                             </strong> 
                             ({{c['created_at']}}):
                         </p>
-                        <p>{{c['comment']}}</p>
+                        <p class="other-note">{{c['comment']}}</p>
                     </div>
                 {%else%}
                 <p>Ei kommentteja.</p>
