--- a/templates/add_entry.html
+++ b/templates/add_entry.html
@@ -70,7 +70,7 @@
             <input type="text" name="race_name" placeholder="">
 
             <label>Muut tiedot:</label>
-            <textarea class="comment-box" name="other" rows="4" placeholder="Lisää tietoa juoksustasi"></textarea>
+            <textarea name="other" rows="4" placeholder="Lisää tietoa juoksustasi"></textarea>
 
             <button type="submit">Lisää juoksu</button>
         </form>
