--- a/templates/personal_diary.html
+++ b/templates/personal_diary.html
@@ -15,7 +15,7 @@
                 <li><a href="/">ETUSIVU</a></li>
                 <li><a href="/logout">KIRJAUDU ULOS</a></li>
                 <li><a href="/browseruns">SELAA</a></li>
-                <li><a href="/kisat">KISAT</a></li>
+                <li><a href="/competition">KISAT</a></li>
             </ul>
         </nav>
     </header>
