--- a/templates/add_entry.html
+++ b/templates/add_entry.html
@@ -13,11 +13,15 @@
                     <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Lenkkipolku logo" class="banner-logo">
                 </li>
                 <li><a href="/">ETUSIVU</a></li>
-                <li><a href="/register">REKISTERÖIDY</a></li>
+                {%if session.get("user_id")%}
                 <li><a href="/logout">KIRJAUDU ULOS</a></li>
-                <li><a href="/paivakirja">PÄIVÄKIRJA</a></li>
+                {%else%}
+                <li><a href="/register">REKISTERÖIDY</a></li>
+                <li><a href="/login">KIRJAUDU SISÄÄN</a></li>
+                {%endif%}
+                <li><a href="/personal_diary">PÄIVÄKIRJA</a></li>
                 <li><a href="/browseruns">SELAA</a></li>
-                <li><a href="/kisat">KISAT</a></li>
+                <li><a href="/competition">KISAT</a></li>
             </ul>
         </nav>
     </header>
