--- a/templates/browseruns.html
+++ b/templates/browseruns.html
@@ -86,19 +86,19 @@
                     <li>
                         <span><strong>Käyttäjä:</strong> 
                             <a href="{{url_for('user_page', username=entry['username'])}}">
-                                {{ entry['username'] }}
+                                {{ entry["username"] }}
                             </a>
                         </span>
                         <br>
-                        <strong>{{ entry['distance_km'] }} km {{ entry['distance_m'] }} m</strong>
-                        {{ entry['runtime'] }} -
-                        {{ entry['terrain'] }} -
-                        {{ entry['run_type'] }}
-                        {% if entry['race_name'] %}(Kisa: {{ entry['race_name']}}){% endif %}
+                        <strong>{{ entry["distance_km"] }} km {{ entry["distance_m"] }} m</strong>
+                        {{ entry["runtime"] }} -
+                        {{ entry["terrain"] }} -
+                        {{ entry["run_type"] }}
+                        {% if entry["race_name"] %}(Kisa: {{ entry["race_name"]}}){% endif %}
                         <br>
-                        <em>Juoksijan kommentti: {{entry['other'] }}</em>
+                        <em>Juoksijan kommentti: {{entry["other"] }}</em>
                         <br>
-                        <small>{{ entry['created_at'] }}</small>
+                        <small>{{ entry["created_at"] }}</small>
                     </li>
                     {% endfor %}
                 </ul>
