--- a/templates/edit_entry.html
+++ b/templates/edit_entry.html
@@ -53,9 +53,9 @@
             <div class="checkbox-group">
                 {% for t in terrains %}
                 <label>
-                    <input type="checkbox" name="terrain" value="{{ t['name']}}"
-                    {% if entry and t['name'] in entry['terrain'] %} checked {% endif %}>
-                    {{ t['name'] }}
+                    <input type="checkbox" name="terrain" value="{{ t["name"]}}"
+                    {% if entry and t["name"] in entry["terrain"] %} checked {% endif %}>
+                    {{ t["name"] }}
                 </label>
                 {% endfor %}
             </div>
@@ -64,8 +64,8 @@
                 {% for r in run_types %}
                 <label>
                     <input type="radio" name="run_type" value="{{ r['name']}}"
-                    {% if entry and r['name'] in entry['run_type'] %} checked {% endif %}>
-                    {{ r['name'] }}
+                    {% if entry and r["name"] in entry["run_type"] %} checked {% endif %}>
+                    {{ r["name"] }}
                 </label>
                 {% endfor %}
             </div>
@@ -74,7 +74,7 @@
             <input type="text" name="race_name" value="{{ entry['race_name'] or ''}}">
 
             <label>Muut tiedot:</label>
-            <textarea name="other" rows="4">{{ entry['other'] or ''}}</textarea>
+            <textarea name="other" rows="4">{{ entry["other"] or ""}}</textarea>
 
             <button type="submit">Tallenna muutokset</button>
         </form>
