--- a/templates/personal_diary.html
+++ b/templates/personal_diary.html
@@ -37,15 +37,15 @@
                 <ul>
                     {% for entry in entries %}
                     <li>
-                        <strong>{{ entry['distance_km'] }} km {{ entry['distance_m'] }} m</strong>
-                        {{ entry['runtime'] }} -
-                        {{ entry['terrain'] }} -
-                        {{ entry['run_type'] }}
-                        {% if entry['race_name'] %}(Kisa: {{ entry['race_name']}}){% endif %}
+                        <strong>{{ entry["distance_km"] }} km {{ entry["distance_m"] }} m</strong>
+                        {{ entry["runtime"] }} -
+                        {{ entry["terrain"] }} -
+                        {{ entry["run_type"] }}
+                        {% if entry["race_name"] %}(Kisa: {{ entry["race_name"]}}){% endif %}
                         <br>
-                        <em class="other-note">{{ entry['other'] }}</em>
+                        <em class="other-note">{{ entry["other"] }}</em>
                         <br>
-                        <small>{{ entry['created_at'] }}</small>
+                        <small>{{ entry["created_at"] }}</small>
                         <a href="{{ url_for('edit_entry', entry_id=entry['id']) }}" class="button-link">Muokkaa tai poista merkintä</a>
                         <p></p>
                         <p></p>
